--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <H1>Hello World</H1>
     <div>
-        <button>Call us</button>
+        <button class="cp-button">Call us</button>
     </div>
 
     <!-- BEGIN callpage.io widget -->
