--- a/index.html
+++ b/index.html
@@ -1,25 +1,123 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
-    <title>Holded Callpage</title>
+    <title>Mockup Pricing</title>
+    <!-- Add Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0/css/bootstrap.min.css"
+        integrity="sha384-DpXn6pbW1H4FiI6jztw6w7S5wyQ+hFbS6+X5d5IafHWJWm/K4U4fIWt8PmOSt5k5" crossorigin="anonymous">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #2B2D42;
+            color: #FFFFFF;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            padding: 20px;
+        }
+
+        .card {
+            background-color: #FFFFFF;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin: 10px;
+            padding: 20px;
+            text-align: center;
+            width: 300px;
+        }
+
+        .card h2 {
+            margin-top: 0;
+            font-size: 24px;
+            font-weight: normal;
+        }
+
+        .card p {
+            margin: 20px 0;
+            font-size: 18px;
+            line-height: 1.5;
+        }
+
+        .card .price {
+            font-size: 36px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+
+        .phone {
+            background-color: #EFEFEF;
+            text-align: center;
+            padding: 20px;
+            font-size: 24px;
+            font-weight: bold;
+        }
+    </style>
 </head>
 
 <body>
 
-    <H1>Hello World</H1>
-    <div>
-        <button class="cp-button">Call us</button>
+    <header>
+        <h1>Mockup Pricing Page</h1>
+        <p>Choose the plan that's right for you</p>
+    </header>
+    <div class="phone">Call us at <a href="tel:+34932719895">+34 932 719 895</a> if you have any questions about our
+        pricing plans.</div>
+    <div class="container">
+        <div class="card">
+            <h2>Starter</h2>
+            <p>Perfect for small teams</p>
+            <div class="price">€10/mo</div>
+            <ul class="list-unstyled">
+                <li>3 Users</li>
+                <li>Basic Features</li>
+                <li>Limited Support</li>
+            </ul>
+            <a href="#" class="btn btn-primary">Choose Plan</a>
+        </div>
+        <div class="card">
+            <h2>Professional</h2>
+            <p>Best for growing businesses</p>
+            <div class="price">€25/mo</div>
+            <ul class="list-unstyled">
+                <li>10 Users</li>
+                <li>Advanced Features</li>
+                <li>Priority Support</li>
+            </ul>
+            <a href="#" class="btn btn-primary">Choose Plan</a>
+        </div>
+        <div class="card">
+            <h2>Premium</h2>
+            <p>For large businesses</p>
+            <div class="price">€50/mo</div>
+            <ul class="list-unstyled">
+                <li>Unlimited Users</li>
+                <li>Full Suite of Features</li>
+                <li>24/7 Support</li>
+            </ul>
+            <a href="#" class="btn btn-primary">Choose Plan</a>
+        </div>
     </div>
+    <!-- Add Bootstrap JS -->
+    <script src "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha384-9z/+Bhnwyqb/X1N8fyqMSOJOznw5Lny/5FR5h2+wCOQ9DkugHnOrzC/v9xJq3wyF"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.3/umd/popper.min.js"
+        integrity="sha384-DYmkztEEXy8fouy9p9vlTl7VZAzPsdpuB7k4FOm0C4PQ/Cs6s8s7V/owD9NhU6YY"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3I+RMI/K8fUwGw3YIcU6"
+        crossorigin="anonymous"></script>
 
     <!-- BEGIN callpage.io widget -->
-    <script>var loadBabel = function (url, callback) { var script = document.createElement('script'); script.async = true; if (script.readyState) { script.onreadystatechange = function () { if (script.readyState == 'loaded' || script.readyState == 'complete') { script.onreadystatechange = null; callback(window, document); } }; } else { script.onload = function () { callback(window, document); }; } script.src = url; document.head.appendChild(script); }; var getCookie = function (cname) { var objToday = new Date(); var version = objToday.toISOString().split('T')[0].split('-').join(''); var name = cname + '='; var decodedCookie = decodeURIComponent(document.cookie); var cookieArray = decodedCookie.split(';'); for (var i = 0; i < cookieArray.length; i++) { var cookie = cookieArray[i]; cookie = cookie.trim(); if (cookie.indexOf(name) == 0) { return cookie.substring(name.length, cookie.length); } } return version; }; var loadWidget = function (window, document) { var __cp = { "id": "AzICYNuQYXEf1n2gdPH0KlvYcDGKbcgUyHw-_aT10Q0", "version": "1.1" }; var cp = document.createElement('script'); cp.type = 'text/javascript'; cp.async = true; cp.src = "++cdn-widget.callpage.io+build+js+callpage.js".replace(/[+]/g, '/').replace(/[=]/g, '.') + '?v=' + getCookie('callpage-widget-version'); var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(cp, s); if (window.callpage) { alert('You could have only 1 CallPage code on your website!'); } else { window.callpage = function (method) { if (method == '__getQueue') { return this.methods; } else if (method) { if (typeof window.callpage.execute === 'function') { return window.callpage.execute.apply(this, arguments); } else { (this.methods = this.methods || []).push({ arguments: arguments, }); } } }; window.callpage.__cp = __cp; window.callpage('api.button.autoshow'); } }; loadBabel('https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js', function () { return loadWidget(window, document); });</script>
+    <script>var loadBabel = function (url, callback) { var script = document.createElement('script'); script.async = true; if (script.readyState) { script.onreadystatechange = function () { if (script.readyState == 'loaded' || script.readyState == 'complete') { script.onreadystatechange = null; callback(window, document); } }; } else { script.onload = function () { callback(window, document); }; } script.src = url; document.head.appendChild(script); }; var getCookie = function (cname) { var objToday = new Date(); var version = objToday.toISOString().split('T')[0].split('-').join(''); var name = cname + '='; var decodedCookie = decodeURIComponent(document.cookie); var cookieArray = decodedCookie.split(';'); for (var i = 0; i < cookieArray.length; i++) { var cookie = cookieArray[i]; cookie = cookie.trim(); if (cookie.indexOf(name) == 0) { return cookie.substring(name.length, cookie.length); } } return version; }; var loadWidget = function (window, document) { var __cp = { "id": "RcDAWPdDjEft8_Pp2FyS4hZ4VVn7oM7jtby4m6B5KR0", "version": "1.1" }; var cp = document.createElement('script'); cp.type = 'text/javascript'; cp.async = true; cp.src = "++cdn-widget.callpage.io+build+js+callpage.js".replace(/[+]/g, '/').replace(/[=]/g, '.') + '?v=' + getCookie('callpage-widget-version'); var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(cp, s); if (window.callpage) { alert('You could have only 1 CallPage code on your website!'); } else { window.callpage = function (method) { if (method == '__getQueue') { return this.methods; } else if (method) { if (typeof window.callpage.execute === 'function') { return window.callpage.execute.apply(this, arguments); } else { (this.methods = this.methods || []).push({ arguments: arguments, }); } } }; window.callpage.__cp = __cp; window.callpage('api.button.autoshow'); } }; loadBabel('https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js', function () { return loadWidget(window, document); });</script>
     <!-- END callpage.io widget -->
-</body>
-
-</html>
