--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h1>Mockup Pricing Page</h1>
         <p>Choose the plan that's right for you</p>
     </header>
-    <div class="phone">Call us at <a href="#" class="cp-button">+34 932 719 895</a> if you have any questions about our
+    <div class="phone">Call us at <a href="#cp-widget" class="cp-button" id="cp-widget">+34 932 719 895</a> if you have any questions about our
         pricing plans.</div>
     <div class="container">
         <div class="card">
